force-app/main/default/objects/IntegrationBilling__c/IntegrationBilling__c.object-meta.xml
<CustomObject>
    <label>統合請求</label>
    <nameField>
        <displayFormat>IB-{000000000}</displayFormat>
        <label>統合請求ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>