force-app/main/default/objects/IntegrationBilling__c/fields/IsDataLinked__c.field-meta.xml
<CustomField>
    <fullName>IsDataLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ連携済みフラグ</label>
    <type>Checkbox</type>
</CustomField>