force-app/main/default/objects/IntegrationBilling__c/fields/ProcessManagement__c.field-meta.xml
<CustomField>
    <fullName>ProcessManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工程管理</label>
    <referenceTo>ProcessManagement__c</referenceTo>
    <relationshipLabel>統合請求</relationshipLabel>
    <relationshipName>IntegrationBilling_ProcessManagement</relationshipName>
    <type>Lookup</type>
</CustomField>